--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.26.1",
     "lenis": "^1.3.17",
     "lucide-react": "^0.468.0",
+    "midtrans-client": "^1.4.3",
     "next": "14.2.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
