[FEAT] Add environment configuration, update dependencies, and implement admin functionalities

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # Misc
 .DS_Store
 *.pem
+Thumbs.db
+Desktop.ini
+$RECYCLE.BIN/
 
 # Debug
 npm-debug.log*
@@ -26,6 +29,8 @@ yarn-error.log*
 # Local env files
 .env*.local
 .env
+.env.production
+.env.staging
 
 # Vercel
 .vercel
@@ -43,3 +48,21 @@ next-env.d.ts
 # Logs
 logs
 *.log
+
+# Temp & Backup
+*.tmp
+*.temp
+*.bak
+
+# Turbo
+.turbo
+
+# Supabase
+.supabase/
+
+# Cursor & Agents
+/.cursor/
+/.agents/
+
+# clerk configuration (can include secrets)
+/.clerk/
