[FEAT] Enhance user authentication and admin management features, add user profile handling, and implement invoice generation

--- a/.env.example
+++ b/.env.example
@@ -14,12 +14,21 @@ NEXT_PUBLIC_MIDTRANS_CLIENT_KEY=SB-Mid-client-xxxx
 NEXT_PUBLIC_MIDTRANS_IS_PRODUCTION=false
 MIDTRANS_SERVER_KEY=SB-Mid-server-xxxx
 
-# ─── Clerk Auth (Admin) ─────────────────────────────────────
+# ─── Clerk Auth ──────────────────────────────────────────────
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxxx
 CLERK_SECRET_KEY=sk_test_xxxx
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 # ─── App Config ──────────────────────────────────────────────
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# ─── Admin Config ────────────────────────────────────────────
+# Email that will be auto-assigned ADMIN role on first sign-up.
+# After initial setup, manage admins from /admin/users panel.
+INITIAL_ADMIN_EMAIL=your-admin@email.com
 
 # Single event slug for landing page (server-only).
 # If set, fetches this event by slug. If unset or not found, uses nearest published event.
