--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.26.1",
+    "jspdf": "^4.1.0",
     "lenis": "^1.3.17",
     "lucide-react": "^0.468.0",
     "midtrans-client": "^1.4.3",
