[FEAT] Add Resend email configuration, enhance .gitignore for various file types, and update package dependencies

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,13 @@ INITIAL_ADMIN_EMAIL=your-admin@email.com
 # Example: SINGLE_EVENT_SLUG=sun6bks-6-malam-komedi-bekasi
 SINGLE_EVENT_SLUG=sun6bks-6-malam-komedi-bekasi
 
+# ─── Resend (Email) ─────────────────────────────────────────
+# Get your API key from https://resend.com/api-keys
+RESEND_API_KEY=re_xxxx
+# Custom "from" address (requires verified domain on Resend)
+# Default: SUN 6 BKS <onboarding@resend.dev>
+RESEND_FROM_EMAIL=SUN 6 BKS <noreply@yourdomain.com>
+
 # ─── Cron Job (Vercel) ──────────────────────────────────────
 # Generate with: openssl rand -hex 32
 CRON_SECRET=your-32-char-secret-here
