--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
+    "dev:tunnel": "npx ngrok http 3000",
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint"
@@ -22,6 +23,7 @@
     "next": "14.2.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "resend": "^6.9.2",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.6.0"
   },
