[FEAT] Update branding from SUN 6 BKS to Standupindo Bekasi Events across environment variables, documentation, UI components, and email templates

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # =============================================================
-# SUN 6 BKS — Environment Variables
+# Standupindo Bekasi Events — Environment Variables
 # Copy this file to .env.local and fill in the values
 # =============================================================
 
@@ -32,15 +32,15 @@ INITIAL_ADMIN_EMAIL=your-admin@email.com
 
 # Single event slug for landing page (server-only).
 # If set, fetches this event by slug. If unset or not found, uses nearest published event.
-# Example: SINGLE_EVENT_SLUG=sun6bks-6-malam-komedi-bekasi
-SINGLE_EVENT_SLUG=sun6bks-6-malam-komedi-bekasi
+# Example: SINGLE_EVENT_SLUG=standupindo-bekasi-events-6-malam-komedi-bekasi
+SINGLE_EVENT_SLUG=standupindo-bekasi-events-6-malam-komedi-bekasi
 
 # ─── Resend (Email) ─────────────────────────────────────────
 # Get your API key from https://resend.com/api-keys
 RESEND_API_KEY=re_xxxx
 # Custom "from" address (requires verified domain on Resend)
-# Default: SUN 6 BKS <onboarding@resend.dev>
-RESEND_FROM_EMAIL=SUN 6 BKS <noreply@yourdomain.com>
+# Default: Standupindo Bekasi Events <onboarding@resend.dev>
+RESEND_FROM_EMAIL=Standupindo Bekasi Events <noreply@yourdomain.com>
 
 # ─── Cron Job (Vercel) ──────────────────────────────────────
 # Generate with: openssl rand -hex 32
